Issue 61674 Fixing code completion in web project (applied changes from j2seproject)